# django-fast-pagination

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_fast_pagination/: __init__.py  apps.py  conf.py  errors.py  pagination.py
