[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-fast-pagination"
version = "0.0.1"
authors = [
  { name="Ubiwhere", email="author@example.com" },
]
description = "A small package to improve your API performance by removing pagination COUNT SQL query."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ubiwhere/django-fast-pagination"
"Bug Tracker" = "https://github.com/ubiwhere/django-fast-pagination/issues"
